...
    <string name="reg_ques_gender" tools:ignore="MissingTranslation">Patient\'s gender*</string>
    <string name="reg_ques_dob" tools:ignore="MissingTranslation">Patient\'s birth date*</string>
    <string name="label_or" tools:ignore="MissingTranslation">Or</string>
    <string name="country_of_birth_label" tools:ignore="MissingTranslation">Country of birth*</string>
    <string name="male" tools:ignore="MissingTranslation">Male</string>
    <string name="female" tools:ignore="MissingTranslation">Female</string>
    <string name="non_binary" tools:ignore="MissingTranslation">Non binary</string>
    <string name="dob_hint" tools:ignore="MissingTranslation">Date of birth (dd/mm/yyyy)</string>
    <string name="estyr" tools:ignore="MissingTranslation">Estimated years</string>
    <string name="age_out_of_bounds_message" tools:ignore="MissingTranslation">Patient\'s age must be between 0 and 120</string>
    <string name="register_patient_error" tools:ignore="MissingTranslation">Something went wrong and the patient has not been created. Please, try again.</string>
    <string name="update_patient_success" tools:ignore="MissingTranslation">Patient %s updated</string>
    <string name="update_patient_error" tools:ignore="MissingTranslation">Patient %s cannot be updated due to server error</string>
    <string name="select_language" tools:ignore="MissingTranslation">Select language</string>

    <!-- Logout dialog -->
...
    <!-- Buttons -->
    <string name="dialog_button_cancel" tools:ignore="MissingTranslation">Cancel</string>
    <string name="dialog_button_ok" translatable="false">OK</string>
    <string name="dialog_button_select_location" tools:ignore="MissingTranslation">Select Location</string>

...

    <!-- Dashboard Activity -->
    <string name="dashboard_search_icon_label" tools:ignore="MissingTranslation">Find Patients</string>

    <!-- Patient Dashboard Activity -->
...
    <string name="get_patient_from_database_error" tools:ignore="MissingTranslation">Failed to fetch patient from database</string>
    <string name="action_start_visit" tools:ignore="MissingTranslation">Start visit</string>
    <string name="patient_scroll_tab_details_label" tools:ignore="MissingTranslation">Details</string>
    <string name="patient_scroll_tab_visits_label" tools:ignore="MissingTranslation">Visits</string>
    <string name="patient_scroll_tab_charts_label" tools:ignore="MissingTranslation">Charts</string>
...

    <!-- Capture Vitals activity -->
    <string name="action_register_patient" tools:ignore="MissingTranslation">Register Patient</string>

    <!-- Form Entry Activity -->
...

    <!--ChartsView Activity-->
    <string name="charts_view_toolbar_title" tools:ignore="MissingTranslation">Charts View</string>

    <!-- Image content description strings -->
...
    <string name="settings_privacy_policy" tools:ignore="MissingTranslation">Privacy policy</string>

    <string name="action_submit" tools:ignore="MissingTranslation">Register</string>
    <string name="action_reset" tools:ignore="MissingTranslation">Reset</string>

...
    <string name="bt_exception_pairing_message" tools:ignore="MissingTranslation">Pairing with the device failed</string>

    <string name="blood_pressure_button_label" tools:ignore="MissingTranslation">Receive blood pressure data</string>
    <string name="weight_button_label" tools:ignore="MissingTranslation">Receive weight data</string>
    <string name="systolic_label" tools:ignore="MissingTranslation">Systolic</string>
    <string name="diastolic_label" tools:ignore="MissingTranslation">Diastolic</string>
    <string name="pulse_label" tools:ignore="MissingTranslation">Pulse</string>
    <string name="weight_value_label" tools:ignore="MissingTranslation">Weight</string>
    <string name="weight_value" tools:ignore="MissingTranslation">Weight (kg)</string>
    <string name="height_value_label" tools:ignore="MissingTranslation">Height</string>
    <string name="height_value" tools:ignore="MissingTranslation">Height (cm)</string>
    <string name="blood_pressure_instructions_title" tools:ignore="MissingTranslation">To measure blood pressure</string>
...
    <string name="treatment_adherence_text" tools:ignore="MissingTranslation">Is the patient following these treatments?</string>
    <string name="patient_with_no_values_to_show" tools:ignore="MissingTranslation">The patient has no values yet</string>
    <string name="blood_pressure_evolution" tools:ignore="MissingTranslation">Blood Pressure Evolution</string>
    <string name="country_of_birth" tools:ignore="MissingTranslation">Country of birth</string>
    <string name="recording_in_progress" tools:ignore="MissingTranslation">Recording in Progress</string>
    <string name="start" tools:ignore="MissingTranslation">Start:</string>
    <string name="end" tools:ignore="MissingTranslation">End:</string>
    <string name="edit" tools:ignore="MissingTranslation"><u>Edit</u></string>
    <string name="remove_vitals" tools:ignore="MissingTranslation">Remove Vitals</string>
    <string name="end_vitals_dialog_message" tools:ignore="MissingTranslation">Yes, cancel</string>
...
    <string name="cancel_vitals_dialog_message" tools:ignore="MissingTranslation">Are you sure you want to go back? The data will be lost.</string>
    <string name="visit_cancel" tools:ignore="MissingTranslation">The visit has been cancelled</string>
    <string name="record_legal_consent_u" tools:ignore="MissingTranslation"><u>Record legal consent</u></string>
    <string name="record_legal_consent" tools:ignore="MissingTranslation">Record legal consent</string>
    <string name="height_range" tools:ignore="MissingTranslation">Height should be between 50–280 cm</string>
    <string name="weight_range" tools:ignore="MissingTranslation">Weight should be between 30–280 kg</string>
    <string name="pause" tools:ignore="MissingTranslation">Pause</string>
    <string name="stop_save" tools:ignore="MissingTranslation">Stop and save recording</string>
    <string name="resume" tools:ignore="MissingTranslation">Continue</string>
    <string name="systolic_vital" tools:ignore="MissingTranslation">Systolic</string>
...
    <string name="previously_recommended" tools:ignore="MissingTranslation">Previously \n recommended</string>
    <string name="new_recommendation" tools:ignore="MissingTranslation">Recommended \n today</string>
    <string name="medication" tools:ignore="MissingTranslation">Medication name</string>
    <string name="diuretic" tools:ignore="MissingTranslation">Diuretic</string>
    <string name="beta_blocker" tools:ignore="MissingTranslation">Beta blocker</string>
    <string name="ace_inhibitor" tools:ignore="MissingTranslation">ACE inhibitor</string>
    <string name="calcium_channel_blocker" tools:ignore="MissingTranslation">Calcium channel blocker</string>
    <string name="angiotensin_receptor_blocker" tools:ignore="MissingTranslation">ARA II</string>
    <string name="register_medication" tools:ignore="MissingTranslation">Finish</string>
    <string name="additional_notes" tools:ignore="MissingTranslation">Additional notes</string>
    <string name="add_treatment" tools:ignore="MissingTranslation">Add Treatment</string>
    <string name="medication_type" tools:ignore="MissingTranslation">Medication type</string>
    <string name="when_was_it_recommended" tools:ignore="MissingTranslation">When was it recommended?</string>
    <string name="add_treatment_button" tools:ignore="MissingTranslation">Add Treatment</string>
    <string name="recommended_treatments" tools:ignore="MissingTranslation">Recommended treatments:</string>
    <string name="treatment_discard_dialog_title" tools:ignore="MissingTranslation">Discard Values</string>
    <string name="treatment_discard_dialog_body" tools:ignore="MissingTranslation">Are you sure you want to leave this page? You will lose any changes.</string>
...
    <string name="finalise_treatment" tools:ignore="MissingTranslation">Finalise</string>
