<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="country_of_birth_default" tools:ignore="MissingTranslation">Select country of birth</string>
    <string name="search_hint_text" tools:ignore="MissingTranslation">Search…</string>
    <string name="no_result_found" tools:ignore="MissingTranslation">Results not found</string>
    <string name="afghanistan" tools:ignore="MissingTranslation">Afghanistan</string>
    <string name="albania" tools:ignore="MissingTranslation">Albania</string>
    <string name="algeria" tools:ignore="MissingTranslation">Algeria</string>
    <string name="american_samoa" tools:ignore="MissingTranslation">American Samoa</string>
    <string name="andorra" tools:ignore="MissingTranslation">Andorra</string>
    <string name="angola" tools:ignore="MissingTranslation">Angola</string>
    <string name="anguilla" tools:ignore="MissingTranslation">Anguilla</string>
    <string name="antarctica" tools:ignore="MissingTranslation">Antarctica</string>
    <string name="antigua_and_barbuda" tools:ignore="MissingTranslation">Antigua and Barbuda</string>
    <string name="argentina" tools:ignore="MissingTranslation">Argentina</string>
    <string name="aruba" tools:ignore="MissingTranslation">Aruba</string>
    <string name="australia" tools:ignore="MissingTranslation">Australia</string>
    <string name="austria" tools:ignore="MissingTranslation">Austria</string>
    <string name="azerbaijan" tools:ignore="MissingTranslation">Azerbaijan</string>
    <string name="bahamas" tools:ignore="MissingTranslation">Bahamas</string>
    <string name="bahrain" tools:ignore="MissingTranslation">Bahrain</string>
    <string name="bangladesh" tools:ignore="MissingTranslation">Bangladesh</string>
...
