<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_long">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/start_visit_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/color_accent"
        android:contentDescription="@string/start_visit_dialog_title"
        android:text="@string/start_visit_dialog_title"
        app:iconTint="@color/white"
        android:tint="@color/color_accent"
        app:icon="@drawable/calendar"
        app:rippleColor="@color/color_accent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>