...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/blood_pressure_recommendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bp_normal_recommendation"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
...
