...
            android:layout_height="wrap_content"
            android:hint="@string/doctors_name"
            android:orientation="horizontal"
            android:visibility="gone">

            <AutoCompleteTextView
                android:id="@+id/doctors_name_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/doctors_name_dropdown"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>
...
