...
    <string name="addr2_hint">Address Line 2</string>
    <string name="addr_invalid_error">Address cannot contain invalid characters</string>
    <string name="atleastone">Fill at least one address field</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob_hint">Date of Birth (dd/MM/yyyy)</string>
    <string name="estyr">Estimated Years</string>
    <string name="estmonth">Estimated Months</string>

    <!-- Offline Mode -->
    <string name="offline_mode_unsupported_in_first_login">Offline mode is not supported during first login.Enable online mode and then try again.</string>
    <string name="login_offline_toast_message">You are now in offline mode.</string>
...
