appId: ${APP_ID}
---
- tapOn: "Username * "
- inputText: ${MAESTRO_TEST_USERNAME}
- tapOn: "Password * "
- inputText: ${MAESTRO_TEST_PASSWORD}
- hideKeyboard
- tapOn: "Session location * "
- tapOn:
    id: "android:id/text1"
    index: 0
- scrollUntilVisible:
    centerElement: true
    element: "LOGIN"
- tapOn: "LOGIN"
- runFlow:
    when:
      visible: "OK"
    commands:
      - tapOn: "OK"