appId: edu.upc
---
- launchApp
- runFlow:
- tapOn:
    id: "edu.upc:id/skip"
- doubleTapOn:
    id: "edu.upc:id/loginUrlField"
- "eraseText"
- inputText: "https://blopup-dev.upc.edu/openmrs"
- tapOn: "Username * "
- inputText: ${USERNAME}
- tapOn: "Password * "
- inputText: ${PASSWORD}
- tapOn: "Session Location * "
- tapOn:
    id: "android:id/text1"
    index: 0
- scrollUntilVisible:
    element: "LOGIN"
- tapOn: "LOGIN"
- runFlow:
    when:
      visible: "OK"
    commands:
      - tapOn: "OK"
- tapOn: Register Patient
- tapOn: "Name*"
- "inputRandomPersonName"
- tapOn: "Family Name*"
- "inputRandomPersonName"
- tapOn: "Female"
- scrollUntilVisible:
    element:
      id: "edu.upc:id/datePicker"
    visibilityPercentage: 100
- tapOn: "Date of Birth (dd/MM/yyyy)"
- inputText: "20/01/1980"
- scrollUntilVisible:
    element:
      id: "edu.upc:id/country_of_birth"
- tapOn: "Select country of birth"
- tapOn: "Aruba"
- scrollUntilVisible:
    element: "Select language"
- tapOn: "Select language"
- tapOn: "Spanish"
- scrollUntilVisible:
    element: "Record legal consent"
- tapOn: "Record legal consent"
- tapOn: "RECORD LEGAL CONSENT"
- extendedWaitUntil:
    notVisible: "Pause"
    timeout: 100000
- tapOn: "Stop and save recording"
- tapOn: "SUBMIT"
- assertVisible: "START VISIT"