appId: edu.upc
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "edu.upc:id/description"
    timeout: 100000
- runFlow:
    when:
      visible:
        id: "edu.upc:id/description"
    file: "subflows/InitialTour.yaml"
- runFlow:
    when:
      visible:
        id: "edu.upc:id/loginUsernameField"
    file: "subflows/Login.yaml"
- tapOn: Register Patient
- tapOn: "Name*"
- "inputRandomPersonName"
- tapOn: "Family Name*"
- "inputRandomPersonName"
- tapOn: "Female"
- scrollUntilVisible:
    element:
      id: "edu.upc:id/datePicker"
    visibilityPercentage: 100
- tapOn: "Date of Birth (dd/MM/yyyy)"
- inputText: "20/01/1980"
- scrollUntilVisible:
    element:
      id: "edu.upc:id/country_of_birth"
- tapOn: "Select country of birth"
- tapOn: "Aruba"
- scrollUntilVisible:
    element: "Select language"
- tapOn: "Select language"
- tapOn: "Spanish"
- scrollUntilVisible:
    element: "Record legal consent"
- tapOn: "Record legal consent"
- tapOn: "RECORD LEGAL CONSENT"
- extendedWaitUntil:
    notVisible: "Pause"
    timeout: 100000
- tapOn: "Stop and save recording"
- tapOn: "SUBMIT"
- assertVisible: "START VISIT"
- runFlow:
    when:
      visible:
        id: "edu.upc:id/start_visit_fab"
    file: "subflows/EditPatient.yaml"
- runFlow:
    file: "subflows/TakeVitals.yaml"