appId: ${APP_ID}
---
- tapOn: Register Patient
- runFlow:
    when:
      visible: "com.android.permissioncontroller:id/permission_message"
    commands:
      - tapOn: "com.android.permissioncontroller:id/permission_allow_foreground_only_button"
- tapOn: "Name*"
- "inputRandomPersonName"
- tapOn: "Family name*"
- "inputRandomPersonName"
- tapOn: "Female"
- scrollUntilVisible:
    centerElement: true
    element: "Or"
    visibilityPercentage: 100
- tapOn: "Estimated years"
- inputText: "85"
- scrollUntilVisible:
    centerElement: true
    element: "Select country of birth"
- hideKeyboard
- tapOn: "Select country of birth"
- tapOn: "Argentina"
- scrollUntilVisible:
    centerElement: true
    element: "Select language"
- tapOn: "Select language"
- tapOn: "Spanish"
- scrollUntilVisible:
    centerElement: true
    element: "Record legal consent"
- tapOn: "Record legal consent"
- runFlow:
    when:
      visible: "com.android.permissioncontroller:id/permission_message"
    commands:
      - tapOn: "com.android.permissioncontroller:id/permission_allow_foreground_only_button"
- tapOn: "RECORD LEGAL CONSENT"
- extendedWaitUntil:
    notVisible: "Pause"
    timeout: 100000
- tapOn: "Stop and save recording"
- scrollUntilVisible:
    centerElement: true
    element: "Register"
- tapOn: "Register"