appId: ${APP_ID}
---
- tapOn:
    id: "${APP_ID}:id/edit"
- tapOn: "Name*"
- "inputRandomPersonName"
- tapOn: "Family name*"
- "inputRandomPersonName"
- tapOn: "Male"
- scrollUntilVisible:
    centerElement: true
    element:
      id: "${APP_ID}:id/dobEditText"
    visibilityPercentage: 100
- hideKeyboard
- tapOn: "Date of birth (dd/mm/yyyy)"
- inputText: "20/12/1982"
- hideKeyboard
- scrollUntilVisible:
    element:
     id: "${APP_ID}:id/country_of_birth"
- tapOn:
    id: "${APP_ID}:id/country_of_birth"
- tapOn: "Angola"
- scrollUntilVisible:
    centerElement: true
    element:
      id: "${APP_ID}:id/submitButton"
- tapOn: "REGISTER"
- assertVisible: "Male"
- assertVisible: "START VISIT"