appId: edu.upc
---
- tapOn:
    id: "edu.upc:id/start_visit_fab"
- tapOn: "How to activate the device"
- tapOn: "Receive blood pressure data"
- tapOn: "Go back"
- tapOn: "YES, CANCEL"
- tapOn: "Receive blood pressure data"
- assertVisible: "Data Received Successfully."
- tapOn: "Next"
- tapOn: "Receive weight data"
- assertVisible: "Data Received Successfully."
- tapOn: "Next"
- tapOn: "Height"
- inputText: "167"
- hideKeyboard
- tapOn: "Next"
- assertVisible:
      id: "edu.upc:id/blood_pressure_recommendation"