appId: ${APP_ID}
---
- tapOn:
    id: "${APP_ID}:id/start_visit_fab"
- tapOn: "How to activate the device"
- tapOn: "Receive blood pressure data"
- tapOn: "Go back"
- tapOn: "YES, CANCEL"
- tapOn: "Receive blood pressure data"
- assertVisible: "Data Received Successfully."
- tapOn: "Next"
- tapOn: "Receive weight data"
- assertVisible: "Data Received Successfully."
- tapOn: "Next"
- longPressOn: "Height"
- eraseText
- inputText: "167"
- hideKeyboard
- tapOn: "Next"
- assertVisible:
      id: "${APP_ID}:id/blood_pressure_recommendation"