appId: ${APP_ID}
---
- tapOn: "Add Treatment"
- tapOn: "Previously\ \n recommended"
- tapOn: "Medication name"
- inputText: "Paracetamol"
- hideKeyboard
- tapOn: "Diuretic"
- tapOn: "Beta blocker"
- tapOn: "Additional notes"
- inputText: "Some note"
- hideKeyboard
- tapOn: "Finish"
- assertVisible: "Paracetamol"
- assertVisible: ".*Diuretic.*"
- assertVisible: ".*Beta blocker.*"
- scrollUntilVisible:
    centerElement: true
    element: "Some note"
- tapOn: "Add Treatment"
- tapOn: "Previously\ \n recommended"
- tapOn: "Medication name"
- inputText: "Ibuprofen"
- hideKeyboard
- tapOn: "ACE inhibitor"
- tapOn: "ARA II"
- tapOn: "Additional notes"
- inputText: "Some other note"
- hideKeyboard
- tapOn: "Finish"
- assertVisible: "Ibuprofen"
- tapOn:
      text: "⋮"
      index: 1
- tapOn: "Remove"
- assertNotVisible: "Paracetamol"
- assertVisible: "Ibuprofen"
- tapOn:
        text: "⋮"
        index: 0
- tapOn: "Edit"
- tapOn: "Recommended \n today"
- tapOn:
    id: "edu.upc.debug:id/doctors_name_dropdown"
- tapOn:
    text: "Jake Smith - Nº Coleg. 0989264778"
    index: 1
- tapOn: "Medication name"
- eraseText
- inputText: "Metronidazol"
- hideKeyboard
- tapOn: "ACE inhibitor"
- tapOn: "Finish"
- assertVisible: "Metronidazol"
- assertNotVisible: "Ibuprofen"
- pressKey: "back"
- tapOn: "Details"
- assertVisible: "Metronidazol"
- assertNotVisible: "Paracetamol"
- assertNotVisible: "Ibuprofen"
